[package]
name = "esparver"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "A highly opinionated wrapper around git that works with subrepos in an intuitive way"
homepage = "https://github.com/marcesquerra/esparver"
exclude = [
  "nix/*",
  ".envrc",
  "shell.nix"
]

[[bin]]
name = "ged"
path = "src/main.rs"

[dependencies]
carapace_spec_clap = "0.1.11"
clap = "4.3.5"
clap_complete = "4.3.1"
